--- a/notebooks/02_numerical_pipeline_introduction.ipynb
+++ b/notebooks/02_numerical_pipeline_introduction.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adult_census.head()"
+    "adult_census"
    ]
   },
   {
@@ -86,14 +86,14 @@
    "outputs": [],
    "source": [
     "data = adult_census.drop(columns=[target_name])\n",
-    "data.head()"
+    "data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now linger on the variables, also denominated features, that we later\n",
+    "We can now focus on the variables, also denominated features, that we later\n",
     "use to build our predictive model. In addition, we can also check how many\n",
     "samples are available in our dataset."
    ]
