--- a/notebooks/03_categorical_pipeline.ipynb
+++ b/notebooks/03_categorical_pipeline.ipynb
@@ -129,7 +129,7 @@
    "outputs": [],
    "source": [
     "data_categorical = data[categorical_columns]\n",
-    "data_categorical.head()"
+    "data_categorical"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "outputs": [],
    "source": [
     "print(f\"The dataset is composed of {data_categorical.shape[1]} features\")\n",
-    "data_categorical.head()"
+    "data_categorical"
    ]
   },
   {
@@ -404,7 +404,7 @@
     "and check the generalization performance of this machine learning pipeline using\n",
     "cross-validation.\n",
     "\n",
-    "Before we create the pipeline, we have to linger on the `native-country`.\n",
+    "Before we create the pipeline, we have to focus on the `native-country`.\n",
     "Let's recall some statistics regarding this column."
    ]
   },
@@ -529,9 +529,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, this representation of the categorical variables is\n",
-    "slightly more predictive of the revenue than the numerical variables\n",
-    "that we used previously."
+    "As you can see, this representation of the categorical variables is slightly\n",
+    "more predictive of the revenue than the numerical variables that we used\n",
+    "previously. The reason being that we have more (predictive) categorical\n",
+    "features than numerical ones."
    ]
   },
   {
