--- a/notebooks/cross_validation_stratification.ipynb
+++ b/notebooks/cross_validation_stratification.ipynb
@@ -54,10 +54,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we created our model, we will use the cross-validation framework to\n",
-    "evaluate it. We will use the `KFold` cross-validation strategy. We will define\n",
-    "a dataset with nine samples and repeat the cross-validation three times (i.e.\n",
-    "`n_splits`)."
+    "Once the model is created, we can evaluate it using cross-validation. We start\n",
+    "by using the `KFold` strategy.\n",
+    "\n",
+    "Let's review how this strategy works. For such purpose, we define a dataset\n",
+    "with nine samples and split the dataset into three folds (i.e. `n_splits=3`)."
    ]
   },
   {
@@ -79,12 +80,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By defining three splits, we will use three samples for testing and six for\n",
-    "training each time. `KFold` does not shuffle by default. It means that it will\n",
-    "select the three first samples for the testing set at the first split, then\n",
-    "the three next three samples for the second split, and the three next for the\n",
-    "last split. In the end, all samples have been used in testing at least once\n",
-    "among the different splits.\n",
+    "By defining three splits, we use three samples (1-fold) for testing and six\n",
+    "(2-folds) for training each time. `KFold` does not shuffle by default. It\n",
+    "means that the three first samples are selected for the testing set at the\n",
+    "first split, then the three next three samples for the second split, and the\n",
+    "three next for the last split. In the end, all samples have been used in\n",
+    "testing at least once among the different splits.\n",
     "\n",
     "Now, let's apply this strategy to check the generalization performance of our\n",
     "model."
@@ -111,8 +112,8 @@
    "metadata": {},
    "source": [
     "It is a real surprise that our model cannot correctly classify any sample in\n",
-    "any cross-validation split. We will now check our target's value to understand\n",
-    "the issue."
+    "any cross-validation split. We now check our target's value to understand the\n",
+    "issue."
    ]
   },
   {
@@ -134,18 +135,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the target vector `target` is ordered. It will have some\n",
-    "unexpected consequences when using the `KFold` cross-validation. To illustrate\n",
-    "the consequences, we will show the class count in each fold of the\n",
-    "cross-validation in the train and test set.\n",
+    "We see that the target vector `target` is ordered. This has some unexpected\n",
+    "consequences when using the `KFold` cross-validation. To illustrate the\n",
+    "consequences, we show the class count in each fold of the cross-validation in\n",
+    "the train and test set.\n",
     "\n",
     "Let's compute the class counts for both the training and testing sets using\n",
     "the `KFold` cross-validation, and plot these information in a bar plot.\n",
     "\n",
-    "We will iterate given the number of split and check how many samples of each\n",
-    "are present in the training and testing set. We will store the information\n",
-    "into two distincts lists; one for the training set and one for the testing\n",
-    "set."
+    "We iterate given the number of split and check how many samples of each are\n",
+    "present in the training and testing set. We then store the information into\n",
+    "two distinct lists; one for the training set and one for the testing set."
    ]
   },
   {
@@ -172,8 +172,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To plot the information on a single figure, we will concatenate the\n",
-    "information regarding the fold within the same dataset."
+    "To plot the information on a single figure, we concatenate the information\n",
+    "regarding the fold within the same dataset."
    ]
   },
   {
@@ -218,7 +218,7 @@
     "train_cv_counts.plot.bar()\n",
     "plt.legend(bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")\n",
     "plt.ylabel(\"Count\")\n",
-    "_ = plt.title(\"Training set\")"
+    "_ = plt.title(\"Training set class counts\")"
    ]
   },
   {
@@ -230,7 +230,7 @@
     "test_cv_counts.plot.bar()\n",
     "plt.legend(bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")\n",
     "plt.ylabel(\"Count\")\n",
-    "_ = plt.title(\"Test set\")"
+    "_ = plt.title(\"Test set class counts\")"
    ]
   },
   {
@@ -268,7 +268,7 @@
     "90%. Now that we solved our first issue, it would be interesting to check if\n",
     "the class frequency in the training and testing set is equal to our original\n",
     "set's class frequency. It would ensure that we are training and testing our\n",
-    "model with a class distribution that we will encounter in production."
+    "model with a class distribution that we would encounter in production."
    ]
   },
   {
@@ -303,7 +303,7 @@
     "train_cv_counts.plot.bar()\n",
     "plt.legend(bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")\n",
     "plt.ylabel(\"Count\")\n",
-    "_ = plt.title(\"Training set\")"
+    "_ = plt.title(\"Training set class counts\\n(with suffling)\")"
    ]
   },
   {
@@ -315,7 +315,7 @@
     "test_cv_counts.plot.bar()\n",
     "plt.legend(bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")\n",
     "plt.ylabel(\"Count\")\n",
-    "_ = plt.title(\"Test set\")"
+    "_ = plt.title(\"Test set class counts\\n(with suffling)\")"
    ]
   },
   {
@@ -388,7 +388,7 @@
     "train_cv_counts.plot.bar()\n",
     "plt.legend(bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")\n",
     "plt.ylabel(\"Count\")\n",
-    "_ = plt.title(\"Training set\")"
+    "_ = plt.title(\"Training set class counts\\n(with stratifying)\")"
    ]
   },
   {
@@ -400,7 +400,7 @@
     "test_cv_counts.plot.bar()\n",
     "plt.legend(bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")\n",
     "plt.ylabel(\"Count\")\n",
-    "_ = plt.title(\"Test set\")"
+    "_ = plt.title(\"Test set class counts\\n(with stratifying)\")"
    ]
   },
   {
@@ -411,8 +411,17 @@
     "train set and the test set. The difference is due to the small number of\n",
     "samples in the iris dataset.\n",
     "\n",
-    "In conclusion, this is a good practice to use stratification within the\n",
-    "cross-validation framework when dealing with a classification problem."
+    "In other words, stratifying is more effective than just shuffling when it\n",
+    "comes to making sure that the distributions of classes in all the folds are\n",
+    "representative of the entire dataset. As training and testing folds have\n",
+    "similar class distributions, stratifying leads to a more realistic measure of\n",
+    "the model\u2019s ability to generalize. This is specially important when the\n",
+    "performance metrics depend on the proportion of the positive class, as we will\n",
+    "see in a future notebook.\n",
+    "\n",
+    "The interested reader can learn about other stratified cross-validation\n",
+    "techniques in the [scikit-learn user\n",
+    "guide](https://scikit-learn.org/stable/modules/cross_validation.html#cross-validation-iterators-with-stratification-based-on-class-labels)."
    ]
   }
  ],
