--- a/notebooks/cross_validation_train_test.ipynb
+++ b/notebooks/cross_validation_train_test.ipynb
@@ -10,7 +10,7 @@
     "of predictive models. While this section could be slightly redundant, we\n",
     "intend to go into details into the cross-validation framework.\n",
     "\n",
-    "Before we dive in, let's linger on the reasons for always having training and\n",
+    "Before we dive in, let's focus on the reasons for always having training and\n",
     "testing sets. Let's first look at the limitation of using a dataset without\n",
     "keeping any samples out.\n",
     "\n",
@@ -42,7 +42,7 @@
     "notebook. The target to be predicted is a continuous variable and not anymore\n",
     "discrete. This task is called regression.\n",
     "\n",
-    "This, we will use a predictive model specific to regression and not to\n",
+    "Thus, we will use a predictive model specific to regression and not to\n",
     "classification."
    ]
   },
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.head()"
+    "data"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "target *= 100\n",
-    "target.head()"
+    "target"
    ]
   },
   {
@@ -343,7 +343,7 @@
     "import pandas as pd\n",
     "\n",
     "cv_results = pd.DataFrame(cv_results)\n",
-    "cv_results.head()"
+    "cv_results"
    ]
   },
   {
