--- a/notebooks/datasets_blood_transfusion.ipynb
+++ b/notebooks/datasets_blood_transfusion.ipynb
@@ -84,7 +84,7 @@
     "* `Recency`: the time in months since the last time a person intended to give\n",
     "  blood;\n",
     "* `Frequency`: the number of time a person intended to give blood in the past;\n",
-    "* `Monetary`: the amount of blood given in the past (in c.c.);\n",
+    "* `Monetary`: the amount of blood given in the past (in cm\u00b3);\n",
     "* `Time`: the time in months since the first time a person intended to give\n",
     "  blood.\n",
     "\n",
