--- a/notebooks/ensemble_bagging.ipynb
+++ b/notebooks/ensemble_bagging.ipynb
@@ -6,16 +6,15 @@
    "source": [
     "# Bagging\n",
     "\n",
-    "This notebook introduces a very natural strategy to build ensembles of machine\n",
-    "learning models named \"bagging\".\n",
+    "In this notebook we introduce a very natural strategy to build ensembles of\n",
+    "machine learning models, named \"bagging\".\n",
     "\n",
     "\"Bagging\" stands for Bootstrap AGGregatING. It uses bootstrap resampling\n",
     "(random sampling with replacement) to learn several models on random\n",
     "variations of the training set. At predict time, the predictions of each\n",
     "learner are aggregated to give the final predictions.\n",
     "\n",
-    "First, we will generate a simple synthetic dataset to get insights regarding\n",
-    "bootstraping."
+    "We first create a simple synthetic dataset to better understand bootstrapping."
    ]
   },
   {
@@ -27,16 +26,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# create a random number generator that will be used to set the randomness\n",
-    "rng = np.random.RandomState(1)\n",
-    "\n",
     "\n",
     "def generate_data(n_samples=30):\n",
     "    \"\"\"Generate synthetic dataset. Returns `data_train`, `data_test`,\n",
     "    `target_train`.\"\"\"\n",
     "    x_min, x_max = -3, 3\n",
+    "    rng = np.random.default_rng(1)  # Create a random number generator\n",
     "    x = rng.uniform(x_min, x_max, size=n_samples)\n",
-    "    noise = 4.0 * rng.randn(n_samples)\n",
+    "    noise = 4.0 * rng.normal(size=(n_samples,))\n",
     "    y = x**3 - 0.5 * (x + 1) ** 2 + noise\n",
     "    y /= y.std()\n",
     "\n",
@@ -70,9 +67,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "The relationship between our feature and the target to predict is non-linear.\n",
-    "However, a decision tree is capable of approximating such a non-linear\n",
-    "dependency:"
+    "The target to predict is a non-linear function of the only feature. However, a\n",
+    "decision tree is capable of approximating such a non-linear dependency:"
    ]
   },
   {
@@ -121,16 +117,16 @@
     "\n",
     "## Bootstrap resampling\n",
     "\n",
-    "Given a dataset with `n` data points, bootstrapping corresponds to resampling\n",
-    "with replacement  `n` out of such `n` data points uniformly at random.\n",
+    "Bootstrapping involves uniformly resampling `n` data points from a dataset of\n",
+    "`n` points, with replacement, ensuring each sample has an equal chance of\n",
+    "selection.\n",
     "\n",
     "As a result, the output of the bootstrap sampling procedure is another dataset\n",
-    "with also n data points, but likely with duplicates. As a consequence, there\n",
-    "are also data points from the original dataset that are never selected to\n",
-    "appear in a bootstrap sample (by chance). Those data points that are left away\n",
-    "are often referred to as the out-of-bag sample.\n",
+    "with `n` data points, likely containing duplicates. Consequently, some data\n",
+    "points from the original dataset may not be selected for a bootstrap sample.\n",
+    "These unselected data points are often referred to as the out-of-bag sample.\n",
     "\n",
-    "We will create a function that given `data` and `target` will return a\n",
+    "We now create a function that, given `data` and `target`, returns a\n",
     "resampled variation `data_bootstrap` and `target_bootstrap`."
    ]
   },
@@ -140,9 +136,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bootstrap_sample(data, target):\n",
+    "def bootstrap_sample(data, target, seed=0):\n",
     "    # Indices corresponding to a sampling with replacement of the same sample\n",
     "    # size than the original data\n",
+    "    rng = np.random.default_rng(seed)\n",
     "    bootstrap_indices = rng.choice(\n",
     "        np.arange(target.shape[0]),\n",
     "        size=target.shape[0],\n",
@@ -160,7 +157,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "We will generate 3 bootstrap samples and qualitatively check the difference\n",
+    "We generate 3 bootstrap samples and qualitatively check the difference\n",
     "with the original dataset."
    ]
   },
@@ -176,6 +173,7 @@
     "    data_bootstrap, target_bootstrap = bootstrap_sample(\n",
     "        data_train,\n",
     "        target_train,\n",
+    "        seed=bootstrap_idx,  # ensure bootstrap samples are different but reproducible\n",
     "    )\n",
     "    plt.figure()\n",
     "    plt.scatter(\n",
@@ -242,9 +240,9 @@
    "source": [
     "\n",
     "On average, roughly 63.2% of the original data points of the original dataset\n",
-    "will be present in a given bootstrap sample. Since the bootstrap sample has\n",
-    "the same size as the original dataset, there will be many samples that are in\n",
-    "the bootstrap sample multiple times.\n",
+    "are present in a given bootstrap sample. Since the bootstrap sample has the\n",
+    "same size as the original dataset, there are many samples that are in the\n",
+    "bootstrap sample multiple times.\n",
     "\n",
     "Using bootstrap we are able to generate many datasets, all slightly different.\n",
     "We can fit a decision tree for each of these datasets and they all shall be\n",
@@ -262,7 +260,7 @@
     "    tree = DecisionTreeRegressor(max_depth=3, random_state=0)\n",
     "\n",
     "    data_bootstrap_sample, target_bootstrap_sample = bootstrap_sample(\n",
-    "        data_train, target_train\n",
+    "        data_train, target_train, seed=bootstrap_idx\n",
     "    )\n",
     "    tree.fit(data_bootstrap_sample, target_bootstrap_sample)\n",
     "    bag_of_trees.append(tree)"
@@ -307,7 +305,7 @@
    "source": [
     "## Aggregating\n",
     "\n",
-    "Once our trees are fitted, we are able to get predictions for each of them. In\n",
+    "Once our trees are fitted, we are able to get predictions from each of them. In\n",
     "regression, the most straightforward way to combine those predictions is just\n",
     "to average them: for a given test data point, we feed the input feature values\n",
     "to each of the `n` trained models in the ensemble and as a result compute `n`\n",
@@ -355,7 +353,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "The unbroken red line shows the averaged predictions, which would be the final\n",
+    "The continuous red line shows the averaged predictions, which would be the final\n",
     "predictions given by our 'bag' of decision tree regressors. Note that the\n",
     "predictions of the ensemble is more stable because of the averaging operation.\n",
     "As a result, the bag of trees as a whole is less likely to overfit than the\n",
@@ -407,7 +405,7 @@
     "bagged_trees_predictions = bagged_trees.predict(data_test)\n",
     "plt.plot(data_test[\"Feature\"], bagged_trees_predictions)\n",
     "\n",
-    "_ = plt.title(\"Predictions from a bagging classifier\")"
+    "_ = plt.title(\"Predictions from a bagging regressor\")"
    ]
   },
   {
@@ -461,15 +459,14 @@
    "metadata": {},
    "source": [
     "We used a low value of the opacity parameter `alpha` to better appreciate the\n",
-    "overlap in the prediction functions of the individual trees.\n",
-    "\n",
-    "This visualization gives some insights on the uncertainty in the predictions\n",
-    "in different areas of the feature space.\n",
+    "overlap in the prediction functions of the individual trees. Such\n",
+    "visualization also gives us an intuition on the variance in the predictions\n",
+    "across different zones of the feature space.\n",
     "\n",
     "## Bagging complex pipelines\n",
     "\n",
-    "While we used a decision tree as a base model, nothing prevents us of using\n",
-    "any other type of model.\n",
+    "Even if here we used a decision tree as a base model, nothing prevents us from\n",
+    "using any other type of model.\n",
     "\n",
     "As we know that the original data generating function is a noisy polynomial\n",
     "transformation of the input variable, let us try to fit a bagged polynomial\n",
@@ -490,7 +487,7 @@
     "\n",
     "polynomial_regressor = make_pipeline(\n",
     "    MinMaxScaler(),\n",
-    "    PolynomialFeatures(degree=4),\n",
+    "    PolynomialFeatures(degree=4, include_bias=False),\n",
     "    Ridge(alpha=1e-10),\n",
     ")"
    ]
@@ -499,10 +496,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This pipeline first scales the data to the 0-1 range with `MinMaxScaler`. Then\n",
-    "it extracts degree-4 polynomial features. The resulting features will all stay\n",
-    "in the 0-1 range by construction: if `x` lies in the 0-1 range then `x ** n`\n",
-    "also lies in the 0-1 range for any value of `n`.\n",
+    "This pipeline first scales the data to the 0-1 range using `MinMaxScaler`. It\n",
+    "then generates degree-4 polynomial features. By design, these features remain\n",
+    "in the 0-1 range, as any power of `x` within this range also stays within 0-1.\n",
     "\n",
     "Then the pipeline feeds the resulting non-linear features to a regularized\n",
     "linear regression model for the final prediction of the target variable.\n",
