--- a/notebooks/ensemble_gradient_boosting.ipynb
+++ b/notebooks/ensemble_gradient_boosting.ipynb
@@ -4,21 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gradient-boosting decision tree (GBDT)\n",
+    "# Gradient-boosting decision tree\n",
     "\n",
-    "In this notebook, we will present the gradient boosting decision tree\n",
-    "algorithm and contrast it with AdaBoost.\n",
+    "In this notebook, we present the gradient boosting decision tree (GBDT) algorithm.\n",
     "\n",
-    "Gradient-boosting differs from AdaBoost due to the following reason: instead\n",
-    "of assigning weights to specific samples, GBDT will fit a decision tree on the\n",
-    "residuals error (hence the name \"gradient\") of the previous tree. Therefore,\n",
-    "each new tree in the ensemble predicts the error made by the previous learner\n",
-    "instead of predicting the target directly.\n",
+    "Even if AdaBoost and GBDT are both boosting algorithms, they are different in\n",
+    "nature: the former assigns weights to specific samples, whereas GBDT fits\n",
+    "successive decision trees on the residual errors (hence the name \"gradient\") of\n",
+    "their preceding tree. Therefore, each new tree in the ensemble tries to refine\n",
+    "its predictions by specifically addressing the errors made by the previous\n",
+    "learner, instead of predicting the target directly.\n",
     "\n",
-    "In this section, we will provide some intuition about the way learners are\n",
-    "combined to give the final prediction. In this regard, let's go back to our\n",
-    "regression problem which is more intuitive for demonstrating the underlying\n",
-    "machinery."
+    "In this section, we provide some intuitions on the way learners are combined\n",
+    "to give the final prediction. For such purpose, we tackle a single-feature\n",
+    "regression problem, which is more intuitive for demonstrating the underlying\n",
+    "machinery.\n",
+    "\n",
+    "Later in this notebook we compare the performance of GBDT (boosting) with that\n",
+    "of a Random Forest (bagging) for a particular dataset."
    ]
   },
   {
@@ -30,17 +33,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# Create a random number generator that will be used to set the randomness\n",
-    "rng = np.random.RandomState(0)\n",
-    "\n",
     "\n",
     "def generate_data(n_samples=50):\n",
     "    \"\"\"Generate synthetic dataset. Returns `data_train`, `data_test`,\n",
     "    `target_train`.\"\"\"\n",
     "    x_max, x_min = 1.4, -1.4\n",
-    "    len_x = x_max - x_min\n",
-    "    x = rng.rand(n_samples) * len_x - len_x / 2\n",
-    "    noise = rng.randn(n_samples) * 0.3\n",
+    "    rng = np.random.default_rng(0)  # Create a random number generator\n",
+    "    x = rng.uniform(x_min, x_max, size=(n_samples,))\n",
+    "    noise = rng.normal(size=(n_samples,)) * 0.3\n",
     "    y = x**3 - 0.5 * x**2 + noise\n",
     "\n",
     "    data_train = pd.DataFrame(x, columns=[\"Feature\"])\n",
@@ -74,9 +74,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we previously discussed, boosting will be based on assembling a sequence of\n",
-    "learners. We will start by creating a decision tree regressor. We will set the\n",
-    "depth of the tree so that the resulting learner will underfit the data."
+    "As we previously discussed, boosting is based on assembling a sequence of\n",
+    "learners. We start by creating a decision tree regressor. We set the depth of\n",
+    "the tree to underfit the data on purpose."
    ]
   },
   {
@@ -96,12 +96,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
-    "Using the term \"test\" here refers to data that was not used for training. It\n",
-    "should not be confused with data coming from a train-test split, as it was\n",
-    "generated in equally-spaced intervals for the visual evaluation of the\n",
-    "predictions."
+    "Using the term \"test\" here refers to data not used for training. It should not\n",
+    "be confused with data coming from a train-test split, as it was generated in\n",
+    "equally-spaced intervals for the visual evaluation of the predictions.\n",
+    "\n",
+    "To avoid writing the same code in multiple places we define a helper function\n",
+    "to plot the data samples as well as the decision tree predictions and\n",
+    "residuals."
    ]
   },
   {
@@ -110,23 +115,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot the data\n",
-    "sns.scatterplot(\n",
-    "    x=data_train[\"Feature\"], y=target_train, color=\"black\", alpha=0.5\n",
-    ")\n",
-    "# plot the predictions\n",
-    "line_predictions = plt.plot(data_test[\"Feature\"], target_test_predicted, \"--\")\n",
+    "def plot_decision_tree_with_residuals(y_train, y_train_pred, y_test_pred):\n",
+    "    \"\"\"Plot the synthetic data, predictions, and residuals for a decision tree.\n",
+    "    Handles are returned to allow custom legends for the plot.\"\"\"\n",
+    "    _fig_, ax = plt.subplots()\n",
+    "    # plot the data\n",
+    "    sns.scatterplot(\n",
+    "        x=data_train[\"Feature\"], y=y_train, color=\"black\", alpha=0.5, ax=ax\n",
+    "    )\n",
+    "    # plot the predictions\n",
+    "    line_predictions = ax.plot(data_test[\"Feature\"], y_test_pred, \"--\")\n",
     "\n",
-    "# plot the residuals\n",
-    "for value, true, predicted in zip(\n",
-    "    data_train[\"Feature\"], target_train, target_train_predicted\n",
-    "):\n",
-    "    lines_residuals = plt.plot([value, value], [true, predicted], color=\"red\")\n",
+    "    # plot the residuals\n",
+    "    for value, true, predicted in zip(\n",
+    "        data_train[\"Feature\"], y_train, y_train_pred\n",
+    "    ):\n",
+    "        lines_residuals = ax.plot(\n",
+    "            [value, value], [true, predicted], color=\"red\"\n",
+    "        )\n",
     "\n",
-    "plt.legend(\n",
-    "    [line_predictions[0], lines_residuals[0]], [\"Fitted tree\", \"Residuals\"]\n",
+    "    handles = [line_predictions[0], lines_residuals[0]]\n",
+    "\n",
+    "    return handles, ax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "handles, ax = plot_decision_tree_with_residuals(\n",
+    "    target_train, target_train_predicted, target_test_predicted\n",
     ")\n",
-    "_ = plt.title(\"Prediction function together \\nwith errors on the training set\")"
+    "legend_labels = [\"Initial decision tree\", \"Initial residuals\"]\n",
+    "ax.legend(handles, legend_labels, bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")\n",
+    "_ = ax.set_title(\"Decision Tree together \\nwith errors on the training set\")"
    ]
   },
   {
@@ -139,15 +163,15 @@
     "for all the residual lines.</p>\n",
     "</div>\n",
     "Since the tree underfits the data, its accuracy is far from perfect on the\n",
-    "training data. We can observe this in the figure by looking at the difference\n",
-    "between the predictions and the ground-truth data. We represent these errors,\n",
-    "called \"Residuals\", by unbroken red lines.\n",
+    "training data. We can observe this in the figure above by looking at the\n",
+    "difference between the predictions and the ground-truth data. We represent\n",
+    "these errors, called \"residuals\", using solid red lines.\n",
     "\n",
-    "Indeed, our initial tree was not expressive enough to handle the complexity of\n",
+    "Indeed, our initial tree is not expressive enough to handle the complexity of\n",
     "the data, as shown by the residuals. In a gradient-boosting algorithm, the\n",
-    "idea is to create a second tree which, given the same data `data`, will try to\n",
-    "predict the residuals instead of the vector `target`. We would therefore have\n",
-    "a tree that is able to predict the errors made by the initial tree.\n",
+    "idea is to create a second tree which, given the same `data`, tries to predict\n",
+    "the residuals instead of the vector `target`, i.e. we have a second tree that\n",
+    "is able to predict the errors made by the initial tree.\n",
     "\n",
     "Let's train such a tree."
    ]
@@ -173,33 +197,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.scatterplot(x=data_train[\"Feature\"], y=residuals, color=\"black\", alpha=0.5)\n",
-    "line_predictions = plt.plot(\n",
-    "    data_test[\"Feature\"], target_test_predicted_residuals, \"--\"\n",
+    "handles, ax = plot_decision_tree_with_residuals(\n",
+    "    residuals,\n",
+    "    target_train_predicted_residuals,\n",
+    "    target_test_predicted_residuals,\n",
     ")\n",
-    "\n",
-    "# plot the residuals of the predicted residuals\n",
-    "for value, true, predicted in zip(\n",
-    "    data_train[\"Feature\"], residuals, target_train_predicted_residuals\n",
-    "):\n",
-    "    lines_residuals = plt.plot([value, value], [true, predicted], color=\"red\")\n",
-    "\n",
-    "plt.legend(\n",
-    "    [line_predictions[0], lines_residuals[0]],\n",
-    "    [\"Fitted tree\", \"Residuals\"],\n",
-    "    bbox_to_anchor=(1.05, 0.8),\n",
-    "    loc=\"upper left\",\n",
-    ")\n",
-    "_ = plt.title(\"Prediction of the previous residuals\")"
+    "legend_labels = [\n",
+    "    \"Predicted residuals\",\n",
+    "    \"Residuals of the\\npredicted residuals\",\n",
+    "]\n",
+    "ax.legend(handles, legend_labels, bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")\n",
+    "_ = ax.set_title(\"Prediction of the initial residuals\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that this new tree only manages to fit some of the residuals. We will\n",
-    "focus on a specific sample from the training set (i.e. we know that the sample\n",
-    "will be well predicted using two successive trees). We will use this sample to\n",
+    "We see that this new tree only manages to fit some of the residuals. We now\n",
+    "focus on a specific sample from the training set (as we know that the sample\n",
+    "can be well predicted using two successive trees). We will use this sample to\n",
     "explain how the predictions of both trees are combined. Let's first select\n",
     "this sample in `data_train`."
    ]
@@ -210,19 +227,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample = data_train.iloc[[-2]]\n",
+    "sample = data_train.iloc[[-7]]\n",
     "x_sample = sample[\"Feature\"].iloc[0]\n",
-    "target_true = target_train.iloc[-2]\n",
-    "target_true_residual = residuals.iloc[-2]"
+    "target_true = target_train.iloc[-7]\n",
+    "target_true_residual = residuals.iloc[-7]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's plot the previous information and highlight our sample of interest.\n",
-    "Let's start by plotting the original data and the prediction of the first\n",
-    "decision tree."
+    "Let's plot the original data, the predictions of the initial decision tree and\n",
+    "highlight our sample of interest, i.e. this is just a zoom of the plot\n",
+    "displaying the initial shallow tree."
    ]
   },
   {
@@ -231,35 +248,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the previous information:\n",
-    "#   * the dataset\n",
-    "#   * the predictions\n",
-    "#   * the residuals\n",
-    "\n",
-    "sns.scatterplot(\n",
-    "    x=data_train[\"Feature\"], y=target_train, color=\"black\", alpha=0.5\n",
+    "handles, ax = plot_decision_tree_with_residuals(\n",
+    "    target_train, target_train_predicted, target_test_predicted\n",
     ")\n",
-    "plt.plot(data_test[\"Feature\"], target_test_predicted, \"--\")\n",
-    "for value, true, predicted in zip(\n",
-    "    data_train[\"Feature\"], target_train, target_train_predicted\n",
-    "):\n",
-    "    lines_residuals = plt.plot([value, value], [true, predicted], color=\"red\")\n",
-    "\n",
-    "# Highlight the sample of interest\n",
-    "plt.scatter(\n",
+    "ax.scatter(\n",
     "    sample, target_true, label=\"Sample of interest\", color=\"tab:orange\", s=200\n",
     ")\n",
-    "plt.xlim([-1, 0])\n",
-    "plt.legend(bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")\n",
-    "_ = plt.title(\"Tree predictions\")"
+    "ax.set_xlim([-1, 0])\n",
+    "ax.legend(bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")\n",
+    "_ = ax.set_title(\"Zoom of sample of interest\\nin the initial decision tree\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's plot the residuals information. We will plot the residuals computed\n",
-    "from the first decision tree and show the residual predictions."
+    "Similarly we plot a zoom of the plot with the prediction of the initial residuals"
    ]
   },
   {
@@ -268,19 +272,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the previous information:\n",
-    "#   * the residuals committed by the first tree\n",
-    "#   * the residual predictions\n",
-    "#   * the residuals of the residual predictions\n",
-    "\n",
-    "sns.scatterplot(x=data_train[\"Feature\"], y=residuals, color=\"black\", alpha=0.5)\n",
-    "plt.plot(data_test[\"Feature\"], target_test_predicted_residuals, \"--\")\n",
-    "for value, true, predicted in zip(\n",
-    "    data_train[\"Feature\"], residuals, target_train_predicted_residuals\n",
-    "):\n",
-    "    lines_residuals = plt.plot([value, value], [true, predicted], color=\"red\")\n",
-    "\n",
-    "# Highlight the sample of interest\n",
+    "handles, ax = plot_decision_tree_with_residuals(\n",
+    "    residuals,\n",
+    "    target_train_predicted_residuals,\n",
+    "    target_test_predicted_residuals,\n",
+    ")\n",
     "plt.scatter(\n",
     "    sample,\n",
     "    target_true_residual,\n",
@@ -288,9 +284,13 @@
     "    color=\"tab:orange\",\n",
     "    s=200,\n",
     ")\n",
-    "plt.xlim([-1, 0])\n",
-    "plt.legend()\n",
-    "_ = plt.title(\"Prediction of the residuals\")"
+    "legend_labels = [\n",
+    "    \"Predicted residuals\",\n",
+    "    \"Residuals of the\\npredicted residuals\",\n",
+    "]\n",
+    "ax.set_xlim([-1, 0])\n",
+    "ax.legend(bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")\n",
+    "_ = ax.set_title(\"Zoom of sample of interest\\nin the initial residuals\")"
    ]
   },
   {
@@ -299,7 +299,7 @@
    "source": [
     "For our sample of interest, our initial tree is making an error (small\n",
     "residual). When fitting the second tree, the residual in this case is\n",
-    "perfectly fitted and predicted. We will quantitatively check this prediction\n",
+    "perfectly fitted and predicted. We can quantitatively check this prediction\n",
     "using the fitted tree. First, let's check the prediction of the initial tree\n",
     "and compare it with the true value."
    ]
@@ -376,7 +376,9 @@
     "second tree corrects the first tree's error, while the third tree corrects the\n",
     "second tree's error and so on).\n",
     "\n",
-    "We will compare the generalization performance of random-forest and gradient\n",
+    "## First comparison of GBDT vs. random forests\n",
+    "\n",
+    "We now compare the generalization performance of random-forest and gradient\n",
     "boosting on the California housing dataset."
    ]
   },
@@ -467,14 +469,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In term of computation performance, the forest can be parallelized and will\n",
+    "In terms of computing performance, the forest can be parallelized and then\n",
     "benefit from using multiple cores of the CPU. In terms of scoring performance,\n",
     "both algorithms lead to very close results.\n",
     "\n",
-    "However, we see that the gradient boosting is a very fast algorithm to predict\n",
-    "compared to random forest. This is due to the fact that gradient boosting uses\n",
-    "shallow trees. We will go into details in the next notebook about the\n",
-    "hyperparameters to consider when optimizing ensemble methods."
+    "However, we see that gradient boosting is overall faster than random forest.\n",
+    "One of the reasons is that random forests typically rely on deep trees (that\n",
+    "overfit individually) whereas boosting models build shallow trees (that\n",
+    "underfit individually) which are faster to fit and predict. In the following\n",
+    "exercise we will explore more in depth how these two models compare."
    ]
   }
  ],
