--- a/notebooks/ensemble_sol_02.ipynb
+++ b/notebooks/ensemble_sol_02.ipynb
@@ -153,6 +153,21 @@
     "plt.plot(data_range[feature_name], forest_predictions, label=\"Random forest\")\n",
     "_ = plt.legend(bbox_to_anchor=(1.05, 0.8), loc=\"upper left\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "solution"
+    ]
+   },
+   "source": [
+    "The random forest reduces the overfitting of the individual trees but still\n",
+    "overfits itself. In the section on \"hyperparameter tuning with ensemble\n",
+    "methods\" we will see how to further mitigate this effect. Still, interested\n",
+    "users may increase the number of estimators in the forest and try different\n",
+    "values of, e.g., `min_samples_split`."
+   ]
   }
  ],
  "metadata": {
