--- a/notebooks/linear_models_feature_engineering_classification.ipynb
+++ b/notebooks/linear_models_feature_engineering_classification.ipynb
@@ -490,10 +490,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "The polynomial kernel approach would be interesting in cases were the\n",
+    "The polynomial kernel approach would be interesting in cases where the\n",
     "original feature space is already of high dimension: in these cases,\n",
     "**computing the complete polynomial expansion** with `PolynomialFeatures`\n",
-    "could be **intractable**, while Nystr\u00f6m method can control the output\n",
+    "could be **intractable**, while the Nystr\u00f6m method can control the output\n",
     "dimensionality with the `n_components` parameter.\n",
     "\n",
     "Let's now explore the use of a radial basis function (RBF) kernel:"
