--- a/notebooks/linear_regression_without_sklearn.ipynb
+++ b/notebooks/linear_regression_without_sklearn.ipynb
@@ -31,7 +31,7 @@
     "import pandas as pd\n",
     "\n",
     "penguins = pd.read_csv(\"../datasets/penguins_regression.csv\")\n",
-    "penguins.head()"
+    "penguins"
    ]
   },
   {
