--- a/notebooks/metrics_classification.ipynb
+++ b/notebooks/metrics_classification.ipynb
@@ -121,7 +121,7 @@
     "predictions a classifier can provide.\n",
     "\n",
     "For this reason, we will create a synthetic sample for a new potential donor:\n",
-    "they donated blood twice in the past (1000 c.c. each time). The last time was\n",
+    "they donated blood twice in the past (1000 cm\u00b3 each time). The last time was\n",
     "6 months ago, and the first time goes back to 20 months ago."
    ]
   },
