--- a/notebooks/metrics_regression.ipynb
+++ b/notebooks/metrics_regression.ipynb
@@ -150,8 +150,9 @@
    "source": [
     "The $R^2$ score represents the proportion of variance of the target that is\n",
     "explained by the independent variables in the model. The best score possible\n",
-    "is 1 but there is no lower bound. However, a model that predicts the expected\n",
-    "value of the target would get a score of 0."
+    "is 1 but there is no lower bound. However, a model that predicts the [expected\n",
+    "value](https://en.wikipedia.org/wiki/Expected_value) of the target would get a\n",
+    "score of 0."
    ]
   },
   {
