--- a/notebooks/parameter_tuning_grid_search.ipynb
+++ b/notebooks/parameter_tuning_grid_search.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "data = adult_census.drop(columns=[target_name, \"education-num\"])\n",
-    "data.head()"
+    "data"
    ]
   },
   {
@@ -325,7 +325,7 @@
     "cv_results = pd.DataFrame(model_grid_search.cv_results_).sort_values(\n",
     "    \"mean_test_score\", ascending=False\n",
     ")\n",
-    "cv_results.head()"
+    "cv_results"
    ]
   },
   {
