--- a/notebooks/parameter_tuning_nested.ipynb
+++ b/notebooks/parameter_tuning_nested.ipynb
@@ -294,7 +294,7 @@
     "</div>\n",
     "\n",
     "However, this evaluation only provides us a single point estimate of the\n",
-    "generalization performance. As recall at the beginning of this notebook, it is\n",
+    "generalization performance. As you recall from the beginning of this notebook, it is\n",
     "beneficial to have a rough idea of the uncertainty of our estimated\n",
     "generalization performance. Therefore, we should instead use an additional\n",
     "cross-validation for this evaluation.\n",
