--- a/notebooks/01_tabular_data_exploration.ipynb
+++ b/notebooks/01_tabular_data_exploration.ipynb
@@ -102,6 +102,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "An alternative is to omit the `head` method. This would output the intial and\n",
+    "final rows and columns, but everything in between is not shown by default. It\n",
+    "also provides the dataframe's dimensions at the bottom in the format `n_rows`\n",
+    "x `n_columns`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adult_census"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The column named **class** is our target variable (i.e., the variable which we\n",
     "want to predict). The two possible classes are `<=50K` (low-revenue) and\n",
     "`>50K` (high-revenue). The resulting prediction problem is therefore a binary\n",
