--- a/notebooks/linear_models_sol_04.ipynb
+++ b/notebooks/linear_models_sol_04.ipynb
@@ -11,7 +11,7 @@
     "In the previous Module we tuned the hyperparameter `C` of the logistic\n",
     "regression without mentioning that it controls the regularization strength.\n",
     "Later, on the slides on \ud83c\udfa5 **Intuitions on regularized linear models** we\n",
-    "metioned that a small `C` provides a more regularized model, whereas a\n",
+    "mentioned that a small `C` provides a more regularized model, whereas a\n",
     "non-regularized model is obtained with an infinitely large value of `C`.\n",
     "Indeed, `C` behaves as the inverse of the `alpha` coefficient in the `Ridge`\n",
     "model.\n",
